// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the CountryList component Should render error message when apollo returning error. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="text-button-gray text-lg"
        style="margin-top: 10%;"
      >
        <svg
          class="w-full mb-5"
          fill="currentColor"
          height="3em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="3em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
        <div
          class="text-center mt-5"
        >
          Error fetching data. Please check your network connection.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="text-button-gray text-lg"
      style="margin-top: 10%;"
    >
      <svg
        class="w-full mb-5"
        fill="currentColor"
        height="3em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="3em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
      <div
        class="text-center mt-5"
      >
        Error fetching data. Please check your network connection.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Unit test for the CountryList component Should render list of countries. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="infinite-scroll-component__outerdiv"
      >
        <div
          class="infinite-scroll-component relative px-2 mt-3 pb-8 max-w-catalog mx-auto"
          style="height: auto; overflow: auto;"
        >
          <div
            class="grid grid-cols-1"
          >
            <div
              class="border-3 border-transparent"
            >
              <div
                class="border border-dial-gray card-drop-shadow"
              >
                <div
                  class="flex justify-between my-4 px-4"
                >
                  <div
                    class="w-1/2 md:w-3/4 inline-block font-semibold text-button-gray"
                  >
                    Afghanistan
                  </div>
                  <div
                    class="inline-flex gap-x-1.5 items-center"
                  >
                    <button
                      class="inline-flex items-center gap-x-1.5 bg-dial-blue px-2 py-1 rounded-md text-white"
                      data-testid="edit-button"
                      type="button"
                    >
                      <img
                        alt="Edit"
                        height="12px"
                        src="/icons/edit.svg"
                        width="12px"
                      />
                      <span
                        class="text-sm"
                      >
                        Edit
                      </span>
                    </button>
                    <button
                      class="delete-button gap-x-1.5"
                      data-testid="delete-button"
                      type="button"
                    >
                      <svg
                        class="text-sm"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"
                        />
                        <path
                          d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <span
                        class="text-sm"
                      >
                        Delete
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="border-3 border-transparent"
            >
              <div
                class="border border-dial-gray card-drop-shadow"
              >
                <div
                  class="flex justify-between my-4 px-4"
                >
                  <div
                    class="w-1/2 md:w-3/4 inline-block font-semibold text-button-gray"
                  >
                    Albania
                  </div>
                  <div
                    class="inline-flex gap-x-1.5 items-center"
                  >
                    <button
                      class="inline-flex items-center gap-x-1.5 bg-dial-blue px-2 py-1 rounded-md text-white"
                      data-testid="edit-button"
                      type="button"
                    >
                      <img
                        alt="Edit"
                        height="12px"
                        src="/icons/edit.svg"
                        width="12px"
                      />
                      <span
                        class="text-sm"
                      >
                        Edit
                      </span>
                    </button>
                    <button
                      class="delete-button gap-x-1.5"
                      data-testid="delete-button"
                      type="button"
                    >
                      <svg
                        class="text-sm"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"
                        />
                        <path
                          d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <span
                        class="text-sm"
                      >
                        Delete
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="relative text-center mt-3"
          >
            Loading more data ...
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component relative px-2 mt-3 pb-8 max-w-catalog mx-auto"
        style="height: auto; overflow: auto;"
      >
        <div
          class="grid grid-cols-1"
        >
          <div
            class="border-3 border-transparent"
          >
            <div
              class="border border-dial-gray card-drop-shadow"
            >
              <div
                class="flex justify-between my-4 px-4"
              >
                <div
                  class="w-1/2 md:w-3/4 inline-block font-semibold text-button-gray"
                >
                  Afghanistan
                </div>
                <div
                  class="inline-flex gap-x-1.5 items-center"
                >
                  <button
                    class="inline-flex items-center gap-x-1.5 bg-dial-blue px-2 py-1 rounded-md text-white"
                    data-testid="edit-button"
                    type="button"
                  >
                    <img
                      alt="Edit"
                      height="12px"
                      src="/icons/edit.svg"
                      width="12px"
                    />
                    <span
                      class="text-sm"
                    >
                      Edit
                    </span>
                  </button>
                  <button
                    class="delete-button gap-x-1.5"
                    data-testid="delete-button"
                    type="button"
                  >
                    <svg
                      class="text-sm"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 16 16"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"
                      />
                      <path
                        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
                        fill-rule="evenodd"
                      />
                    </svg>
                    <span
                      class="text-sm"
                    >
                      Delete
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="border-3 border-transparent"
          >
            <div
              class="border border-dial-gray card-drop-shadow"
            >
              <div
                class="flex justify-between my-4 px-4"
              >
                <div
                  class="w-1/2 md:w-3/4 inline-block font-semibold text-button-gray"
                >
                  Albania
                </div>
                <div
                  class="inline-flex gap-x-1.5 items-center"
                >
                  <button
                    class="inline-flex items-center gap-x-1.5 bg-dial-blue px-2 py-1 rounded-md text-white"
                    data-testid="edit-button"
                    type="button"
                  >
                    <img
                      alt="Edit"
                      height="12px"
                      src="/icons/edit.svg"
                      width="12px"
                    />
                    <span
                      class="text-sm"
                    >
                      Edit
                    </span>
                  </button>
                  <button
                    class="delete-button gap-x-1.5"
                    data-testid="delete-button"
                    type="button"
                  >
                    <svg
                      class="text-sm"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 16 16"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"
                      />
                      <path
                        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"
                        fill-rule="evenodd"
                      />
                    </svg>
                    <span
                      class="text-sm"
                    >
                      Delete
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="relative text-center mt-3"
        >
          Loading more data ...
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
